--- a/Task_2_Portfolio/index.html
+++ b/Task_2_Portfolio/index.html
@@ -30,7 +30,7 @@
     <div class="card">HTML</div>
     <div class="card">CSS</div>
     <div class="card">JavaScript</div>
-    <div class="card">React</div>
+    <div class="card">Python</div>
     <div class="card">Git</div>
     <div class="card">VLSI</div>
   </div>
@@ -40,19 +40,19 @@
   <h2>Projects</h2>
   <div class="grid">
     <div class="card">
-      <h3>Project One</h3>
-      <p>Short description of project.</p>
+      <h3>Smart attendance system using Python</h3>
+      <p>A Smart Attendance System is a Python-based application that automates the process of marking and managing attendance using technology like face recognition, or RFID.</p>
     </div>
     <div class="card">
-      <h3>Project Two</h3>
-      <p>Another cool project.</p>
+      <h3>Design and Implementation of AI Hardware Accelerator for IOT-based Smart Homes.</h3>
+      <p>This project focuses on developing a dedicated AI hardware accelerator to enhance the performance of IoT-based smart home systems by enabling real-time data processing and decision-making at the edge.</p>
     </div>
   </div>
 </section>
 
 <section id="resume">
   <h2>Resume</h2>
-  <p><a href="resume.pdf" target="_blank">Download my Resume</a></p>
+  <p><a href="https://drive.google.com/file/d/1Sa6GatAABMXKdHSDYmmMqWOND7VBtn8C/view?usp=drivesdk" target="_blank">Download my Resume</a></p>
 </section>
 
 <section id="contact">
@@ -63,6 +63,13 @@
     <textarea placeholder="Your message" required></textarea>
     <button type="submit">Send</button>
   </form>
+
+  <div class="contact-info"><br>
+    <p><strong>Email:</strong> tarun@example.com</p><br>
+    <p><strong>Phone:</strong> +91-9876543210</p><br>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/t-a-r-u-n-undefined-136527351?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">View Profile</a></p><br>
+    <p><strong>GitHub:</strong> <a href="https://github.com/Tarun-030" target="_blank">My GitHub</a></p>
+  </div>
 </section>
 
 <footer>
